public class Consts
{
    public struct PlayerAnimations
    {
        public struct PlayerAnimatorClipNames
        {
            public const string ROLL_ANIM = "Roll";
        }

        public const string IS_WALKING = "IsWalking";
        public const string IS_RUNNING = "IsRunning";
        public const string IS_IDLE = "IsIdle";
        public const string ROLL_TRIGGER = "RollTrigger";
    }
}